--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gandalf</title>
+    <title>Gandolf</title>
     
     <link rel="icon" href="https://miro.medium.com/v2/resize:fill:176:176/1*pYDqY6Qn0ytuGHOw_g0VzQ.jpeg" type="image/jpeg"> 
     
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Hello, I'm Gandalf.</h1>
+        <h1>Hello, I'm Gandolf.</h1>
         <p class="subtitle">
             A Bug Hunter and a bit of a Researcher. I'm passionate about the sky and galaxies, and I hunt bugs alongside. My hobbies include Bug Hunting (pentesting) and Hacking.
         </p>
