--- a/lav.html
+++ b/lav.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test</title>
+    <title>gandalf</title>
+     <link rel="icon" href="https://miro.medium.com/v2/resize:fill:176:176/1*pYDqY6Qn0ytuGHOw_g0VzQ.jpeg" type="image/jpeg"> 
     <style>
         body {
             margin: 0;
@@ -23,3 +24,4 @@
     <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTdldjUzNWl4dTM1czJhMXBsODB0ZWxxaTYxb28xdno1cnNubWJhaSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3ohs4CacylzFaHjMM8/giphy.gif" alt="gift">
 </body>
 </html>
+
