--- a/lav.html
+++ b/lav.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gandalf</title>
-     <link rel="icon" href="https://miro.medium.com/v2/resize:fill:176:176/1*pYDqY6Qn0ytuGHOw_g0VzQ.jpeg" type="image/jpeg"> 
+    
+    <!-- Favicon -->
+    <link rel="icon" href="YOUR_ICON_LINK_HERE" type="image/png">
+    <link rel="shortcut icon" href="https://miro.medium.com/v2/resize:fill:176:176/1*pYDqY6Qn0ytuGHOw_g0VzQ.jpeg" type="image/png">
+
     <style>
         body {
             margin: 0;
@@ -24,4 +28,3 @@
     <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTdldjUzNWl4dTM1czJhMXBsODB0ZWxxaTYxb28xdno1cnNubWJhaSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3ohs4CacylzFaHjMM8/giphy.gif" alt="gift">
 </body>
 </html>
-
